force-app/main/default/objects/Campaign/fields/Areweontrackasperplan__c.field-meta.xml
<CustomField>
    <fullName>Areweontrackasperplan__c</fullName>
    <description>Are we on track as per plan (Campaign Status (Green/Yellow/Red).</description>
    <label>Are we on track as per plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>