force-app/main/default/objects/Campaign/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>includes calculated associated resource cost and any fixed costs</description>
    <inlineHelpText>Please enter associated resource cost + any fixed costs</inlineHelpText>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>