force-app/main/default/objects/Campaign/fields/Campaign_Objective__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Objective__c</fullName>
    <description>Why we are doing this campaign</description>
    <inlineHelpText>Why we are doing this campaign ?</inlineHelpText>
    <label>Campaign Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>