force-app/main/default/objects/Campaign/fields/Campaign_On_Target__c.field-meta.xml
<CustomField>
    <fullName>Campaign_On_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When will we know if this campaign is not working or it is working?</description>
    <inlineHelpText>When will we know if this campaign is not working or it is working?</inlineHelpText>
    <label>Campaign On Target ?</label>
    <type>Checkbox</type>
</CustomField>