force-app/main/default/objects/Campaign/fields/Campaign_Planner__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Planner__c</fullName>
    <label>Campaign Planner</label>
    <type>Url</type>
</CustomField>