force-app/main/default/objects/Campaign/fields/Campaign_Progress_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Progress_Criteria__c</fullName>
    <description>How will we measure progress this Campaign?</description>
    <inlineHelpText>How will we measure progress this Campaign?</inlineHelpText>
    <label>Campaign Progress Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>