force-app/main/default/objects/Campaign/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <description>Are we on track as per plan (Campaign Status (Green/Yellow/Red).</description>
    <inlineHelpText>Are we on track as per plan ?</inlineHelpText>
    <label>Campaign Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Kicking Off</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Post Event Active</fullName>
            </value>
            <value>
                <fullName>Phasing Down</fullName>
            </value>
            <value>
                <fullName>Complete / Closed</fullName>
            </value>
            <value>
                <fullName>--None--</fullName>
                <isActive>false</isActive>
                <label>--None--</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>