force-app/main/default/objects/Campaign/fields/Fusion_Offering__c.field-meta.xml
<CustomField>
    <fullName>Fusion_Offering__c</fullName>
    <description>The offering on campaign relates to the Fusion Product offering</description>
    <inlineHelpText>The offering on campaign relates to Fusion Product offering</inlineHelpText>
    <label>Fusion Offering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled Analytics</fullName>
            </value>
            <value>
                <fullName>SAP License Re-sale</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Sub-contracting</fullName>
            </value>
            <value>
                <fullName>Federal Work</fullName>
            </value>
            <value>
                <fullName>BOE</fullName>
            </value>
            <value>
                <fullName>Tableau and Data Analytics Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>