force-app/main/default/objects/Campaign/fields/Howoftenwillwemeasureprogress__c.field-meta.xml
<CustomField>
    <fullName>Howoftenwillwemeasureprogress__c</fullName>
    <description>How often will we measure progress of this Campaign?</description>
    <label>How often will we measure progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>