force-app/main/default/objects/Campaign/fields/HowwewillMeasureProgress__c.field-meta.xml
<CustomField>
    <fullName>HowwewillMeasureProgress__c</fullName>
    <description>How are we measuring progress of the Campaign?</description>
    <label>How we will Measure Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>