force-app/main/default/objects/Campaign/fields/Number_Of_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Campaign_Members__c</fullName>
    <label>Number Of Campaign Members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>