force-app/main/default/objects/Campaign/fields/Review_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Review_Frequency__c</fullName>
    <description>How often will we measure progress?</description>
    <inlineHelpText>How often will we measure progress on this campaign?</inlineHelpText>
    <label>Review Frequency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>