force-app/main/default/objects/Campaign/fields/Success_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics__c</fullName>
    <description>Describes the Success Metrics for the Campaign</description>
    <inlineHelpText>What is considered Success Metrics for the Campaign ?</inlineHelpText>
    <label>Success Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>