force-app/main/default/objects/Campaign/fields/SuccessEvaluationCriteria__c.field-meta.xml
<CustomField>
    <fullName>SuccessEvaluationCriteria__c</fullName>
    <description>When will we know if this campaign is not working or it is working?</description>
    <inlineHelpText>When will we know if this campaign is not working or it is working?</inlineHelpText>
    <label>Success Evaluation Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>