force-app/main/default/objects/Campaign/fields/Value_Won_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_Won_opportunities__c</fullName>
    <formula>&quot;$&quot; + TEXT( HierarchyAmountWonOpportunities  )+ &quot; / &quot; + &quot;$&quot; + TEXT( HierarchyAmountAllOpportunities )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Won opportunities</label>
    <type>Text</type>
</CustomField>