force-app/main/default/objects/Campaign/fields/WhatisconsideredSuccessMetrics__c.field-meta.xml
<CustomField>
    <fullName>WhatisconsideredSuccessMetrics__c</fullName>
    <description>What is considered Success Metrics for the Campaign ?</description>
    <label>What is considered Success Metrics</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>