force-app/main/default/objects/Campaign/fields/WhywearedoingthisCampaign__c.field-meta.xml
<CustomField>
    <fullName>WhywearedoingthisCampaign__c</fullName>
    <description>Why we are doing this campaign.</description>
    <label>Why we are doing this Campaign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>