force-app/main/default/objects/Campaign/fields/Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Won_Opportunities__c</fullName>
    <formula>TEXT( HierarchyNumberOfWonOpportunities  )+  &quot;/&quot; + TEXT( HierarchyNumberOfOpportunities )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>asdasd</inlineHelpText>
    <label>Won Opportunities</label>
    <type>Text</type>
</CustomField>