force-app/main/default/objects/Campaign/listViews/Caelius_Campaign_Scorecard.listView-meta.xml
<ListView>
    <fullName>Caelius_Campaign_Scorecard</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>Campaign_Planner__c</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Caelius: Campaign Scorecard</label>
</ListView>